--- a/index.html
+++ b/index.html
@@ -4,17 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InspireInnoTech.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>InspireInnoTech.</title>
+
     <style>
         body {
             padding-top: 70px; /* Make sure content doesn't overlap with sticky navbar */
         }
 
+        button,.btn{
+          background-color: #100977;
+          color: white;
+        }
+
+       
+
         .navbar-brand img {
             width: 40px;
             height: 40px;
+        }
+
+          /* Footer styling */
+          .footer {
+            background-color: #100977;
+            color: white;
+            padding: 40px 0;
+        }
+
+        .footer a {
+            color: white;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            color: #f8f9fa;
+            text-decoration: underline;
+        }
+
+        .social-links a {
+            margin-right: 15px;
+            font-size: 1.5rem;
+            color: #100977;
+            background-color: #100977;
+        }
+
+        .social-links a:hover {
+            color: #100977;
         }
     </style>
 </head>
@@ -40,16 +77,16 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="#services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="#contact.html">Contact</a>
                     </li>
                     <!-- Dropdown Menu -->
                     <li class="nav-item dropdown">
@@ -96,27 +133,27 @@
           <div class="carousel-item active">
             <img src="./images/first.jpg" class="d-block w-100" alt="first carouser" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
+              <h5>IT/Information Tecnology</h5>
               <p>
-                Some representative placeholder content for the first slide.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, laborum.
               </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/second.png" class="d-block w-100" alt="second carousel" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
+              <h5>Tecnology </h5>
               <p>
-                Some representative placeholder content for the second slide.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, autem?
               </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/webdeveloper.jpg" class="d-block w-100" alt="third carousel" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
+              <h5>Web Design/Web Developer</h5>
               <p>
-                Some representative placeholder content for the third slide.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, odio.
               </p>
             </div>
           </div>
@@ -150,9 +187,9 @@
               <div class="card">
                   <img src="images/second.png" alt="" width="100%">
                   <div class="card-body">
-                    <h>About</h>
+                    <h5>About</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, perferendis!</p>
-                    <button class="btn btn-primary">About Page</button>
+                    <button class="btn ">About Page</button>
                   </div>
               </div>
             </div>
@@ -160,9 +197,9 @@
               <div class="card">
                   <img src="images/second.png" alt="" width="100%">
                   <div class="card-body">
-                    <h>About</h>
+                    <h5>Conract Us</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, perferendis!</p>
-                    <button class="btn btn-primary">About Page</button>
+                    <button class="btn ">Contact Page</button>
                   </div>
               </div>
             </div>
@@ -170,9 +207,9 @@
               <div class="card">
                   <img src="images/second.png" alt="" width="100%">
                   <div class="card-body">
-                    <h>About</h>
+                    <h5>Services</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, perferendis!</p>
-                    <button class="btn btn-primary">About Page</button>
+                    <button class="btn ">Sevices Page</button>
                   </div>
               </div>
             </div>
@@ -180,9 +217,9 @@
               <div class="card">
                   <img src="images/second.png" alt="" width="100%">
                   <div class="card-body">
-                    <h>About</h>
+                    <h5>Feature Services</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, perferendis!</p>
-                    <button class="btn btn-primary">About Page</button>
+                    <button class="btn ">Feature page</button>
                   </div>
               </div>
             </div>
@@ -191,9 +228,51 @@
       </div>
     </main>
 
+        <!-- Footer -->
+        <footer class="footer mt-5">
+          <div class="container">
+              <div class="row">
+                  <!-- Site Links -->
+                  <div class="col-md-4 mb-4">
+                      <h5>Quick Links</h5>
+                      <ul class="list-unstyled">
+                          <li><a href="#">Home</a></li>
+                          <li><a href="about.html">About Us</a></li>
+                          <li><a href="#services.html">Services</a></li>
+                          <li><a href="#contact.html">Contact Us</a></li>
+                      </ul>
+                  </div>
+  
+                  <!-- Social Media Links -->
+                  <div class="col-md-4 mb-4 text-center social-links">
+                      <h5>Follow Us</h5>
+                      <a href=""><svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg></a>
+                      <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg></a>
+                      <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" width="21" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg></a>
+                      <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" width="21" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg></a>
+                      
+                  </div>
+  
+                  <!-- Copyright Info -->
+                  <div class="col-md-4 mb-4 text-end">
+                      <h5>Contact Info</h5>
+                      <p>Afghanistan, Herat</p>
+                      <p>Email: shakibramiz3@gmail.com</p>
+                      <p>Phone: +93 794586662</p>
+                  </div>
+              </div>
+              <div class="row text-center mt-4">
+                  <div class="col-12">
+                      <p>&copy; 2024 Your Website. All Rights Reserved.</p>
+                  </div>
+              </div>
+          </div>
+      </footer>
+  
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
+     <script src="https://kit.fontawesome.com/your-fontawesome-kit-id.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
