create services page

--- a/about.html
+++ b/about.html
@@ -15,11 +15,13 @@
         }
 
         button,.btn{
-          background-color: #100977;
+          background-color: #0f04a3;
           color: white;
         }
 
-       
+       .card{
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+       }
 
         .navbar-brand img {
             width: 40px;
@@ -28,7 +30,7 @@
 
           /* Footer styling */
           .footer {
-            background-color: #100977;
+            background-color: #0f04a3;
             color: white;
             padding: 40px 0;
         }
@@ -46,12 +48,12 @@
         .social-links a {
             margin-right: 15px;
             font-size: 1.5rem;
-            color: #100977;
-            background-color: #100977;
+            color: #0f04a3;
+            background-color: #0f04a3;
         }
 
         .social-links a:hover {
-            color: #100977;
+            color: #0f04a3;
         }
     </style>
 </head>
@@ -77,10 +79,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link " aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about.html">About</a>
+                        <a class="nav-link active" href="#about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#services.html">Services</a>
@@ -121,12 +123,12 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        What is EduPlatform?
+                        What is InspireInnoTech.?
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
-                        EduPlatform is an online educational platform that offers courses, resources, and learning materials across a wide range of topics and disciplines.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione quisquam sunt doloribus nobis praesentium mollitia iusto hic in eaque maxime voluptate numquam id architecto quo dolores nam, optio placeat magni?
                     </div>
                 </div>
             </div>
