--- a/about.html
+++ b/about.html
@@ -7,57 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <!-- css style -->
+         <link rel="stylesheet" href="css/style.css">
+
     <title>InspireInnoTech.</title>
-
-    <style>
-        body {
-            padding-top: 70px; /* Make sure content doesn't overlap with sticky navbar */
-        }
-
-        button,.btn{
-          background-color: #0f04a3;
-          color: white;
-        }
-
-       .card{
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-       }
-
-        .navbar-brand img {
-            width: 40px;
-            height: 40px;
-        }
-
-          /* Footer styling */
-          .footer {
-            background-color: #0f04a3;
-            color: white;
-            padding: 40px 0;
-        }
-
-        .footer a {
-            color: white;
-            text-decoration: none;
-        }
-
-        .footer a:hover {
-            color: #f8f9fa;
-            text-decoration: underline;
-        }
-
-        .social-links a {
-            margin-right: 15px;
-            font-size: 1.5rem;
-            color: #0f04a3;
-            background-color: #0f04a3;
-        }
-
-        .social-links a:hover {
-            color: #0f04a3;
-        }
-    </style>
 </head>
-
 <body>
 
     <!-- Sticky Navbar -->
@@ -82,13 +36,13 @@
                         <a class="nav-link " aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#about.html">About</a>
+                        <a class="nav-link active" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services.html">Services</a>
+                        <a class="nav-link" href="services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <!-- Dropdown Menu -->
                     <li class="nav-item dropdown">
