--- a/about.html
+++ b/about.html
@@ -7,7 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <!-- css style -->
+         <!-- favicon -->
+         <link rel="icon" href="images/favicon.ico">
+        <!-- style -->
          <link rel="stylesheet" href="css/style.css">
 
     <title>InspireInnoTech.</title>
@@ -42,7 +44,7 @@
                         <a class="nav-link" href="services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                     <!-- Dropdown Menu -->
                     <li class="nav-item dropdown">
@@ -51,9 +53,9 @@
                             More
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Blog</a></li>
-                            <li><a class="dropdown-item" href="#">Portfolio</a></li>
-                            <li><a class="dropdown-item" href="#faq">FAQ</a></li>
+                            <li><a class="dropdown-item" href="blogornews.html">Blog or News</a></li>
+                            <li><a class="dropdown-item" href="gallerypage.html">Technology Gallery</a></li>
+
                         </ul>
                     </li>
                 </ul>
@@ -120,7 +122,7 @@
                 <div class="row">
                 <div class="col-md-4">
                   <div class="card">
-                      <img src="images/second.png" alt="" width="100%">
+                      <img src="images/about.jpg" alt="" width="100%">
                       <div class="card-body">
                         <h5>About</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, perferendis!</p>
@@ -130,9 +132,9 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                      <img src="images/second.png" alt="" width="100%">
+                      <img src="images/contact.jpg" alt="" width="100%">
                       <div class="card-body">
-                        <h5>Conract Us</h5>
+                        <h5>Contact Us</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, perferendis!</p>
                         <button class="btn ">Contact Page</button>
                       </div>
@@ -140,7 +142,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                      <img src="images/second.png" alt="" width="100%">
+                      <img src="images/services.webp" alt="" width="100%">
                       <div class="card-body">
                         <h5>Services</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, perferendis!</p>
@@ -163,10 +165,10 @@
                   <div class="col-md-4 mb-4">
                       <h5>Quick Links</h5>
                       <ul class="list-unstyled">
-                          <li><a href="#">Home</a></li>
+                          <li><a href="index.html">Home</a></li>
                           <li><a href="about.html">About Us</a></li>
-                          <li><a href="#services.html">Services</a></li>
-                          <li><a href="#contact.html">Contact Us</a></li>
+                          <li><a href="services.html">Services</a></li>
+                          <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                   </div>
   
