--- a/blogornews.html
+++ b/blogornews.html
@@ -7,8 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+     <!-- favicon -->
+     <link rel="icon" href="images/favicon.ico">
+     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
-
+    
     <!-- Custom CSS -->
     <style>
         .card {
@@ -53,7 +56,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
@@ -62,7 +65,7 @@
                             <a class="nav-link" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact Us</a>
                         </li>
                         <!-- Dropdown Menu -->
                         <li class="nav-item dropdown">
@@ -71,9 +74,8 @@
                                 More
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Blog</a></li>
-                                <li><a class="dropdown-item" href="#">Portfolio</a></li>
-                                <li><a class="dropdown-item" href="#faq">FAQ</a></li>
+                                <li><a class="dropdown-item active" href="blogornews.html">Blog or News</a></li>
+                                <li><a class="dropdown-item" href="gallerypage.html">Technology Gallery</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -87,7 +89,7 @@
             <div class="col-md-8">
                 <!-- Post 1 -->
                 <div class="card post-card">
-                    <img src="https://via.placeholder.com/800x400/0000FF/808080?text=Tech+News" class="card-img-top" alt="Post Image">
+                    <img src="images/Latest Tech News.avif" class="card-img-top" alt="Post Image">
                     <div class="card-body">
                         <h5 class="card-title">Latest Tech News</h5>
                         <p class="card-text">This is a brief description of the latest trends in the tech industry. Stay updated with the newest gadgets and innovations.</p>
@@ -97,7 +99,7 @@
 
                 <!-- Post 2 -->
                 <div class="card post-card">
-                    <img src="https://via.placeholder.com/800x400/FF5733/FFFFFF?text=AI+Advancements" class="card-img-top" alt="Post Image">
+                    <img src="images/ai.jpeg" class="card-img-top" alt="Post Image">
                     <div class="card-body">
                         <h5 class="card-title">AI Advancements in 2024</h5>
                         <p class="card-text">Discover how AI is shaping the future of technology, and learn about the groundbreaking developments made this year.</p>
@@ -107,7 +109,7 @@
 
                 <!-- Post 3 -->
                 <div class="card post-card">
-                    <img src="https://via.placeholder.com/800x400/008000/FFFFFF?text=Cybersecurity+Updates" class="card-img-top" alt="Post Image">
+                    <img src="images/cyber.jpg" class="card-img-top" alt="Post Image">
                     <div class="card-body">
                         <h5 class="card-title">Cybersecurity Trends</h5>
                         <p class="card-text">Stay safe online by keeping up with the latest cybersecurity trends and threats. Protect your data and stay secure.</p>
@@ -174,10 +176,10 @@
                     <div class="col-md-4 mb-4">
                         <h5>Quick Links</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
-                            <li><a href="#services.html">Services</a></li>
-                            <li><a href="#contact.html">Contact Us</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
     
