--- a/gallerypage.html
+++ b/gallerypage.html
@@ -6,8 +6,11 @@
     <title>Technology Gallery</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+     <!-- favicon -->
+     <link rel="icon" href="images/favicon.ico">
+     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- <<<<<<<<<<<<<<<<<<<<<<<Custom CSS>>>>>>>>>>>>>>>>>>>>>>>> -->
+    <!--custom css-->
     <style>
         .gallery-item {
             overflow: hidden;
@@ -68,7 +71,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -86,23 +89,23 @@
                             More
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Blog</a></li>
-                            <li><a class="dropdown-item" href="#">Portfolio</a></li>
-                            <li><a class="dropdown-item" href="#faq">FAQ</a></li>
+                            <li><a class="dropdown-item" href="blogornews.html">Blog or News</a></li>
+                            <li><a class="dropdown-item active" href="gallerypage.html">Technology Gallery</a></li>
+
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!-- <<<<<<<<<<<<<<<Technology Gallery Section>>>>>>>>>>>>>>>>>> -->
+    <!--technology gallery section -->
     <section id="tech-gallery" class="container mt-5">
         <h2 class="text-center mb-4">Our Latest Technology</h2>
         <div class="row g-4">
-            <!-- <<<<<<<<<<<<<<<Gallery Items>>>>>>>>>>>>>>> -->
+            <!--gallery items -->
             <div class="col-md-4">
                 <div class="gallery-item" data-bs-toggle="modal" data-bs-target="#galleryModal1">
-                    <img src="images/first.jpg" alt="AI Technology" class="img-fluid">
+                    <img src="images/ai.jpeg" alt="AI Technology" class="img-fluid">
                     <div class="gallery-overlay">
                         <h4>AI Technology</h4>
                     </div>
@@ -111,7 +114,7 @@
 
             <div class="col-md-4">
                 <div class="gallery-item" data-bs-toggle="modal" data-bs-target="#galleryModal2">
-                    <img src="images/webdeveloper.jpg" alt="Blockchain" class="img-fluid">
+                    <img src="images/blockchain.jpg" alt="Blockchain" class="img-fluid">
                     <div class="gallery-overlay">
                         <h4>Blockchain Solutions</h4>
                     </div>
@@ -120,7 +123,7 @@
 
             <div class="col-md-4">
                 <div class="gallery-item" data-bs-toggle="modal" data-bs-target="#galleryModal3">
-                    <img src="images/webdeveloper.jpg" alt="IoT Devices" class="img-fluid">
+                    <img src="images/iot.jpg" alt="IoT Devices" class="img-fluid">
                     <div class="gallery-overlay">
                         <h4>IoT Devices</h4>
                     </div>
@@ -129,7 +132,7 @@
 
             <div class="col-md-4">
                 <div class="gallery-item" data-bs-toggle="modal" data-bs-target="#galleryModal4">
-                    <img src="images/second.png" alt="5G Technology" class="img-fluid">
+                    <img src="images/5g.jpeg" alt="5G Technology" class="img-fluid">
                     <div class="gallery-overlay">
                         <h4>5G Technology</h4>
                     </div>
@@ -138,7 +141,7 @@
 
             <div class="col-md-4">
                 <div class="gallery-item" data-bs-toggle="modal" data-bs-target="#galleryModal5">
-                    <img src="images/first.jpg" alt="VR/AR Solutions" class="img-fluid">
+                    <img src="images/vr.jpeg" alt="VR/AR Solutions" class="img-fluid">
                     <div class="gallery-overlay">
                         <h4>VR/AR Solutions</h4>
                     </div>
@@ -147,7 +150,7 @@
 
             <div class="col-md-4">
                 <div class="gallery-item" data-bs-toggle="modal" data-bs-target="#galleryModal6">
-                    <img src="images/second.png" alt="Quantum Computing" class="img-fluid">
+                    <img src="images/Quantum Computing.jpg" alt="Quantum Computing" class="img-fluid">
                     <div class="gallery-overlay">
                         <h4>Quantum Computing</h4>
                     </div>
@@ -156,57 +159,18 @@
         </div>
     </section>
 
-    <!-- <<<<<<<<<<<<<<<<<<Modals>>>>>>>>>>>>>>>>> -->
-    <div class="modal fade" id="galleryModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content">
-                <div class="modal-body p-0">
-                    <img src="images/webdeveloper.jpg" alt="AI Technology" class="img-fluid">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="galleryModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content">
-                <div class="modal-body p-0">
-                    <img src="images/second.png" alt="Blockchain Solutions" class="img-fluid">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="galleryModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content">
-                <div class="modal-body p-0">
-                    <img src="images/first.jpg" alt="IoT Devices" class="img-fluid">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
+   
     <footer class="footer mt-5">
         <div class="container">
             <div class="row">
-                <!-- Site Links -->
+                <!-- site links -->
                 <div class="col-md-4 mb-4">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="#services.html">Services</a></li>
-                        <li><a href="#contact.html">Contact Us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
 
