--- a/services.html
+++ b/services.html
@@ -6,7 +6,9 @@
     <title>Services and Progress</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+     <!-- favicon -->
+     <link rel="icon" href="images/favicon.ico">
+     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -40,7 +42,7 @@
                         <a class="nav-link active" href="services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                     <!-- Dropdown Menu -->
                     <li class="nav-item dropdown">
@@ -49,9 +51,9 @@
                             More
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Blog</a></li>
-                            <li><a class="dropdown-item" href="#">Portfolio</a></li>
-                            <li><a class="dropdown-item" href="#faq">FAQ</a></li>
+                            <li><a class="dropdown-item" href="blogornews.html">Blog or News</a></li>
+                            <li><a class="dropdown-item" href="gallerypage.html">Technology Gallery</a></li>
+
                         </ul>
                     </li>
                 </ul>
@@ -60,7 +62,7 @@
     </nav>
 
     <!-- Services Section -->
-    <section id="services" class="container mt-5">
+    <section id="services" class="container mt-5 ">
         <h2 class="text-center mb-4">Our Services</h2>
         <div class="row">
             <!-- Service 1 -->
@@ -134,10 +136,10 @@
                 <div class="col-md-4 mb-4">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="#services.html">Services</a></li>
-                        <li><a href="#contact.html">Contact Us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
 
