--- a/blogornews.html
+++ b/blogornews.html
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
             <div class="container">
                 <!-- Site Logo -->
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="./images/slogan.jpg" alt="logo">
                     InspireInnoTech.
                 </a>
@@ -201,13 +201,13 @@
                         <p>Phone: +93 794586662</p>
                     </div>
                 </div>
-                <div class="row text-center mt-4">
-                    <div class="col-12">
-                        <p>&copy; 2024 Your Website. All Rights Reserved.</p>
-                    </div>
-                </div>
             </div>
         </footer>
+        <div class="text-end bg-light text-dark">
+            <div class="col-12">
+                <p>&copy; 2024 Your Website. All Rights Reserved.</p>
+            </div>
+        </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
